--- a/config/database.yml
+++ b/config/database.yml
@@ -1,8 +1,6 @@
 default: &default
-  adapter: mysql2
-  encoding: utf8mb4
-  collation: utf8mb4_bin
-  strict: true
+  adapter: postgresql
+  encoding: unicode
   pool: 10
 
 development:
@@ -12,3 +10,10 @@ development:
 test:
   <<: *default
   database: personal_dash_test
+
+production:
+  <<: *default
+  database: personal_dash_prod
+  pool: 25
+  username: <%= ENV["PG_USER"] %>
+  password: <%= ENV["PG_PASSWORD"]  %>
