Update nginx conf, deploy, capistrano

--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -1,10 +1,14 @@
-
-upstream puma {
+upstream puma_dashboard {
   server unix:///home/deploy/apps/personal_dashboard/shared/tmp/sockets/personal_dashboard-puma.sock;
 }
 
 server {
-  listen 80 default_server deferred;
+    listen jnadeau.ca:80;
+    return 301 https://$host$request_uri;
+}
+
+server {
+  listen dashboard.jnadeau.ca:80;
   server_name dashboard.jnadeau.ca;
 
   root /home/deploy/apps/personal_dashboard/current/public;
@@ -17,13 +21,13 @@ server {
     add_header Cache-Control public;
   }
 
-  try_files $uri/index.html $uri @puma;
-  location @puma {
+  try_files $uri/index.html $uri @puma_dashboard;
+  location @puma_dashboard {
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header Host $http_host;
     proxy_redirect off;
 
-    proxy_pass http://puma;
+    proxy_pass http://puma_dashboard;
   }
 
   error_page 500 502 503 504 /500.html;
