--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -1,5 +1,5 @@
-upstream puma_dashboard {
-  server unix:///home/deploy/apps/personal_dashboard/shared/tmp/sockets/personal_dashboard-puma.sock;
+upstream thin {
+  server unix:///home/deploy/apps/personal_dashboard/shared/tmp/sockets/thin.sock;
 }
 
 server {
@@ -21,13 +21,13 @@ server {
     add_header Cache-Control public;
   }
 
-  try_files $uri/index.html $uri @puma_dashboard;
-  location @puma_dashboard {
+  try_files $uri/index.html $uri @thin;
+  location @thin {
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header Host $http_host;
     proxy_redirect off;
 
-    proxy_pass http://puma_dashboard;
+    proxy_pass http://thin;
   }
 
   error_page 500 502 503 504 /500.html;
