--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -1,5 +1,5 @@
 upstream thin {
-  server unix:///home/deploy/apps/personal_dashboard/shared/tmp/sockets/thin.sock;
+  server unix:///home/deploy/apps/personal_dashboard/shared/tmp/sockets/thin.0.sock;
 }
 
 server {
