--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -8,8 +8,17 @@ server {
 }
 
 server {
-  listen dashboard.jnadeau.ca:80;
+    listen dashboard.jnadeau.ca:80;
+    return 301 https://$host$request_uri;
+}
+
+server {
+  listen dashboard.jnadeau.ca:443;
   server_name dashboard.jnadeau.ca;
+
+  ssl    on;
+  ssl_certificate    /etc/letsencrypt/live/dashboard.jnadeau.ca/fullchain.pem;
+  ssl_certificate_key    /etc/letsencrypt/live/dashboard.jnadeau.ca/privkey.pem;
 
   root /home/deploy/apps/personal_dashboard/current/public;
   access_log /home/deploy/apps/personal_dashboard/current/log/nginx.access.log;
