--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -4,7 +4,7 @@ upstream thin {
 
 server {
     listen jnadeau.ca:80;
-    return 301 https://$host$request_uri;
+    return 301 https://jnadeau.ca$request_uri;
 }
 
 server {
