--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -9,7 +9,7 @@ server {
 
 server {
     listen dashboard.jnadeau.ca:80;
-    return 301 https://$host$request_uri;
+    return 301 https://dashboard.jnadeau.ca$request_uri;
 }
 
 server {
