--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -3,18 +3,9 @@ upstream thin {
 }
 
 server {
-    listen jnadeau.ca:80;
-    return 301 https://jnadeau.ca$request_uri;
-}
-
-server {
-    listen dashboard.jnadeau.ca:80;
-    return 301 https://dashboard.jnadeau.ca$request_uri;
-}
-
-server {
-  listen dashboard.jnadeau.ca:443;
+  listen dashboard.jnadeau.ca:443 ssl;
   server_name dashboard.jnadeau.ca;
+  server_tokens off;
 
   ssl    on;
   ssl_certificate    /etc/letsencrypt/live/dashboard.jnadeau.ca/fullchain.pem;
