Add Meditation Dashboard

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,13 @@
 AUTH_TOKEN=AUTH_TOKEN
+SECRET_KEY=secret
+
+# Postgres Production Database
+PG_USER=user
+PG_PASSWORD=pass
+
+# HTTP Basic Auth
+HTTP_USER=user
+HTTP_PASSWORD=pass
 
 # Good Reads
 GOOD_READS_USER_ID=user_id
@@ -16,3 +25,7 @@ LAST_FM_USER_NAME=user_name
 LAST_FM_PASSWORD=password
 LAST_FM_API_KEY=12345
 LAST_FM_API_SECRET=12345
+
+# Headspace
+HEADSPACE_USER_NAME=user
+HEADSPACE_PASSWORD=pass
